example物品材质添加完成

--- a/src/main/resources/assets/fengx-agriculture/lang/zh_cn.json
+++ b/src/main/resources/assets/fengx-agriculture/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.fengx-agriculture.item_group": "Fengx的农业",
+  "itemGroup.fengxagriculture.item_group": "Fengx的农业",
   "item.fengx-agriculture.example_item": "示例物品",
   "chinese_cabbage": "中国卷心菜",
   "chinese_cabbage_seed": "中国卷心菜种子",
